# Iron-Gate-Mesh

./: README.md
deploy/: Dockerfile  docker-compose.yml
irongate-core/: Cargo.toml  Makefile
irongate-core/src/: admission_control.rs  audit_log.rs  config.rs  ebpf_manager.rs  main.rs  network_client.rs  policy_engine.rs  raft.rs  raft_node.rs
irongate-kernel/include/: maps.h  protocol_factory.h  shared_defs.h
irongate-kernel/src/: filter.c  load_balancer.c  maps.h  tail_calls.c
irongate-visuals/: README.md
irongate-visuals/dashboards/: README.md  main.go  metrics.go  network_map_cfg.json  theme_config.json
irongate-visuals/dashboards/alerts/: critical_ips.list  notification_channels.json  remediation_scripts.json  thresholds.yaml
irongate-visuals/dashboards/network/: receiver.go
irongate-visuals/dashboards/snapshots/: chaos_test_result.json  daily_summary_2023_10_27.json
irongate-visuals/dashboards/templates/: main_dashboard.json  raft_internals.json  resource_usage.json  security_deep_dive.json
irongate-visuals/dashboards/topology/: topology_provider.go
scripts/: bench_pps.sh  build.ps1  chaos_test.py  setup_ebpf_env.sh
